--- a/.circleci/second_config.yml
+++ b/.circleci/second_config.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: sleep
+          command: sleep 5000
+      - run:
           name: useless-job
           command: echo "This job does absolutely nothing"
 
