--- a/.circleci/second_config.yml
+++ b/.circleci/second_config.yml
@@ -7,11 +7,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: print default branch
+          name: print current branch
           command: echo "<< pipeline.trigger_parameters.github_app.branch >>"
-      - run:
-          name: useless-job
-          command: echo "This job does absolutely nothing"
+        - run:
+          name: print default branch
+          command: echo "<< pipeline.trigger_parameters.github_app.default_branch >>"
+      # - run:
+      #     name: useless-job
+      #     command: echo "This job does absolutely nothing"
 
 workflows:
   useless-workflow:
