--- a/.circleci/second_config.yml
+++ b/.circleci/second_config.yml
@@ -9,12 +9,9 @@ jobs:
       - run:
           name: print current branch
           command: echo "<< pipeline.trigger_parameters.github_app.branch >>"
-      # - run:
-      #     name: print default branch
-      #     command: echo "<< pipeline.trigger_parameters.github_app.default_branch >>"
-      # - run:
-      #     name: useless-job
-      #     command: echo "This job does absolutely nothing"
+      - run:
+          name: print default branch
+          command: echo "<< pipeline.trigger_parameters.github_app.default_branch >>"
 
 workflows:
   useless-workflow:
