--- a/.circleci/unit_tests.yml
+++ b/.circleci/unit_tests.yml
@@ -14,9 +14,8 @@ jobs:
           command: echo "This job does absolutely nothing"
 
 workflows:
-  deploy-workflow:
+  unit-tests:
     jobs:
       - deploy-job
 
       
-   
