--- a/.circleci/unit_tests.yml
+++ b/.circleci/unit_tests.yml
@@ -1,21 +1,61 @@
+
 version: 2.1
 
 jobs:
-  deploy-job:
+  install:
     docker:
       - image: cimg/node:17.9.1
     steps:
       - checkout
       - run:
-          name: print default branch
-          command: echo "<< pipeline.trigger_parameters.github_app.branch >>"
+          name: Install dependencies
+          command: npm install
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - node_modules
+
+  test:
+    docker:
+      - image: cimg/node:17.9.1
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/project
       - run:
-          name: useless-job
-          command: echo "This job does absolutely nothing"
+          name: Run tests
+          command: npm test
+      - store_test_results:
+          path: junit.xml
+
+  store-artifacts:
+    docker:
+      - image: cimg/node:17.9.1
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/project
+      - run:
+          name: Zip node_modules
+          command: zip -r node_modules.zip node_modules
+      - store_artifacts:
+          path: ~/project/node_modules.zip
+          destination: big-artifact.zip
+      - store_artifacts:
+          path: ~/project/package.json
+          destination: small-artifact.json
 
 workflows:
-  unit-tests:
+  install-and-test:
     jobs:
-      - deploy-job
-
-# 
+      - install
+      - approve:
+          type: approval
+          requires:
+            - install
+      - test:
+          requires:
+            - approve
+      - store-artifacts:
+          requires:
+            - approve
